<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="changelog">In this update:\n- Dark Theme!\n- Added search for apps\n- Added a button to ignore an app within the app details screen\n- Fixed some memory issues\n\nFuture plans:\n- Search within changelogs\n- Favorites\n- Notifications</string>

    <string name="action_feedback">Feedback</string>

    <string name="title_activity">Activity</string>
    <string name="nav_header_title">All apps</string>

    <string name="source_not_play_store">The update was not installed from the Play Store</string>
    <string name="action_open_play_store">Open Play Store</string>
    <string name="error_fetching_description">No description available</string>
    <string name="cant_open_app">Can\'t open this app</string>
    <string name="action_open_app">Open app</string>
    <string name="title_details">Update history</string>
    <string name="empty_state_message"></string>
    <string name="menu_style">Style</string>
    <string name="style_basic">Basic</string>
    <string name="style_short">Short</string>
    <string name="style_full">Full</string>
    <string name="action_show_info">Show application info</string>
    <string name="action_about">About</string>
    <string name="developed_by">Developed by SalaDevs</string>
    <string name="privacy_policy"><a href="">Privacy policy</a></string>
    <string name="dev_email">saladevs@gmail.com</string>
    <string name="action_search">Search</string>
    <string name="menu_theme">Theme</string>
    <string name="theme_day">Day</string>
    <string name="theme_night">Night</string>
    <string name="theme_auto">Auto</string>
    <string name="action_toggle_ignore">Toggle ignore</string>

</resources>
