<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_switch_theme"
        android:orderInCategory="50"
        android:title="@string/menu_theme"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_theme_day"
                android:title="@string/theme_day"/>
            <item
                android:id="@+id/action_theme_night"
                android:title="@string/theme_night"/>
            <item
                android:id="@+id/action_theme_auto"
                android:title="@string/theme_auto"/>

        </menu>
    </item>

    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="100"
        android:title="@string/action_feedback"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:title="@string/action_about"
        app:showAsAction="never"/>

</menu>
